lines update
